<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ NOTICE                                                                    ~
  ~                                                                           ~
  ~ This software (or technical data) was produced for the U.S. Government    ~
  ~ under contract, and is subject to the Rights in Data-General Clause       ~
  ~ 52.227-14, Alt. IV (DEC 2007).                                            ~
  ~                                                                           ~
  ~ Copyright 2021 The MITRE Corporation. All Rights Reserved.                ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright 2021 The MITRE Corporation                                      ~
  ~                                                                           ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");           ~
  ~ you may not use this file except in compliance with the License.          ~
  ~ You may obtain a copy of the License at                                   ~
  ~                                                                           ~
  ~    http://www.apache.org/licenses/LICENSE-2.0                             ~
  ~                                                                           ~
  ~ Unless required by applicable law or agreed to in writing, software       ~
  ~ distributed under the License is distributed on an "AS IS" BASIS,         ~
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  ~
  ~ See the License for the specific language governing permissions and       ~
  ~ limitations under the License.                                            ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


    <groupId>org.mitre.mpf</groupId>
    <version>6.3</version>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>mpf-tika-text-detection-component</artifactId>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <mpf.assembly.format>tar.gz</mpf.assembly.format>
    </properties>

    <dependencies>
        <!-- All MPF Java Components must include the mpf-java-component-api as a dependency -->
        <dependency>
            <groupId>org.mitre.mpf</groupId>
            <artifactId>mpf-java-component-api</artifactId>
            <version>6.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>1.28.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-parsers</artifactId>
            <version>1.28.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-langdetect</artifactId>
            <version>1.28.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.13.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.2.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Make this jar executable -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <!-- Ensures that any libraries for the component are accessible from the plugin -->
                            <classpathPrefix>./lib/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <!-- Assembles the tar.gz which can be deployed as a component. assemblyDescriptor.xml defines the
                 tar.gz directory structure. -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>assemble-tika-text-detection-package</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>TikaTextDetection</finalName>
                            <descriptor>assemblyDescriptor.xml</descriptor>
                            <outputDirectory>target/plugin-packages</outputDirectory>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
